--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "illuminate/support": "5.0.*|5.1.*|5.2.*|5.3.*|5.4.*",
     "illuminate/console": "5.0.*|5.1.*|5.2.*|5.3.*|5.4.*",
     "illuminate/view": "5.0.*|5.1.*|5.2.*|5.3.*|5.4.*",
-    "symfony/process": "^2.6|^3.1.0"
+    "symfony/process": "^2.6|^3.0.0|^3.1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.8|~5.0",
